# vlm-faithfulness-benchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  README.md  VISION.md  pyproject.toml  scripts_cloud_setup_b2.sh  scripts_dev_confirm.py  scripts_dev_diag_glm.py  scripts_dev_diag_glm_nothink.py  scripts_dev_pilot.py  scripts_dev_pilot_v2.py  scripts_dev_plumb_kimi.py  scripts_dev_smoke_glm.py  scripts_dev_smoke_s02.py  scripts_run_shard.py
config/: env_deepseek_vl2_requirements.txt  env_kimi_vl_requirements.txt  p2_patterns_v1.txt  pool_manifest_v1.json  prereg_m9_v1.json  prereg_selection_v1.json  prereg_v1.json  prereg_v2.json  prereg_v3.json  stopwords_v1.txt
data/: README.md
decisions/: ADR-002-Construction-Provenance-Lifecycle.md  ADR-003-Incomplete-Candidate-Subjects.md  ADR-004-Answer-Correctness-Eligibility.md  ADR-005-Composite-Generator-Subject-Identity.md  ADR-006-P6-Completeness-and-Branch-Applicability.md  ADR-007-Authority-Precedence-and-ADR-Specification-Ordering.md  ADR-008-D1-Terminology-Disposition.md
design/: ADR-003_E1_Design_Alternatives.md
docs/: 00_Benchmark_Charter.md  01_Benchmark_Design.md  03_Problem_Definition.md  05_Formal_Definitions.md  06_Label_Specification.md  06a_Benchmark_Data_Model.md  07_Label_Generation_Pipeline.md  08_Dataset_Specification.md  09_Baseline_Systems.md  10_Evaluation_Protocol.md  11_Benchmark_Assurance.md
scripts/: qa_adr_application_check.sh  qa_link_check.sh  qa_metadata_check.sh  qa_normative_set_check.sh  qa_registry_check.sh  qa_stale_authority_check.sh  (+2 more)
(+85 files in other folders)
